--- a/public/index_aftermins.html
+++ b/public/index_aftermins.html
@@ -43,6 +43,7 @@
         const res = await fetch(`${SERVER}/schedule?device=${device}`);
         const data = await res.json();
         const content = data.content;
+        // Start looping the two contents indefinitely
         if (content) startLoop(content, content.next);
       } catch (err) {
         console.error("[ERROR] Fetch schedule failed:", err);
@@ -50,6 +51,7 @@
     }
 
     function startLoop(firstContent, secondContent) {
+      // Recursive function to alternate between two contents
       function showContent(content, nextContent) {
         container.innerHTML = "";
         currentContent = content;
@@ -58,54 +60,41 @@
           const video = document.createElement("video");
           video.src = `${SERVER}/assets/${content.file}`;
           video.autoplay = true;
-          video.loop = false; // manual loop for control
+          video.loop = true; // smooth looping
           video.muted = true;
           video.playsInline = true;
           video.controls = false;
           video.preload = "auto";
           container.appendChild(video);
-
-          // Loop video manually until switchAt (or indefinitely if no nextContent)
-          const loopVideo = () => {
-            if (!nextContent || (content.switchAt && Date.now() < content.switchAt)) {
-              video.currentTime = 0;
-              video.play();
-            }
-          };
-          video.addEventListener("ended", loopVideo);
-
         } else {
           const img = new Image();
           img.src = `${SERVER}/assets/${content.file}`;
           container.appendChild(img);
         }
 
-        setupCountdown(content.switchAt);
+        setupCountdown(content.switchAfterMins);
 
-        // Clear previous timer
+        // Set timer to switch to next content
         if (switchTimer) clearTimeout(switchTimer);
-
-        // Switch to nextContent only once
-        if (content.switchAt && nextContent) {
-          const msUntilSwitch = content.switchAt - Date.now();
-          switchTimer = setTimeout(() => {
-            showContent(nextContent, null); // nextContent will now loop indefinitely
-          }, Math.max(msUntilSwitch, 0));
-        }
+        const msUntilSwitch = content.switchAfterMins * 60 * 1000;
+        switchTimer = setTimeout(() => {
+          showContent(nextContent, content); // swap back and forth
+        }, msUntilSwitch);
       }
 
-      // Start with firstContent
       showContent(firstContent, secondContent);
     }
 
-    function setupCountdown(switchAt) {
+    function setupCountdown(switchAfterMins) {
       if (countdownInterval) clearInterval(countdownInterval);
-      if (!switchAt) return;
+      if (!switchAfterMins) return;
+
+      let remainingMs = switchAfterMins * 60 * 1000;
 
       countdownInterval = setInterval(() => {
-        const remainingMs = switchAt - Date.now();
+        remainingMs -= 1000;
         if (remainingMs <= 0) {
-          console.log(`[DEBUG][${device}] Switching content now: ${currentContent.next ? currentContent.next.file : 'looping indefinitely'}`);
+          console.log(`[DEBUG][${device}] Switching content now: ${currentContent.next ? currentContent.next.file : 'loop'}`);
           clearInterval(countdownInterval);
         } else {
           const minutes = Math.floor((remainingMs / 1000 / 60));
@@ -115,7 +104,7 @@
       }, 1000);
     }
 
-    // Start fetching schedule
+    // Start
     fetchSchedule();
   </script>
 </body>
